:bug: Z-index fix

--- a/src/client/src/app/components/select/select.component.scss
+++ b/src/client/src/app/components/select/select.component.scss
@@ -73,6 +73,7 @@
 // Menu
 .select .menu {
   position: absolute;
+  z-index: 2;
   max-height: 150px;
   max-width: 190px;
   width: 100%;
